--- a/index.html
+++ b/index.html
@@ -1,29 +1,317 @@
 <!doctype html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CHEN HAO | Personal Homepage</title>
+  <title>CHEN HAO | AI & Agents</title>
+  <!-- 引入极客风格字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Orbitron:wght@500;900&display=swap" rel="stylesheet">
+  
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;max-width:900px;margin:48px auto;padding:0 20px;line-height:1.6}
-    .card{border:1px solid #e5e7eb;border-radius:16px;padding:20px}
-    h1{margin:0 0 6px 0}
-    .muted{color:#6b7280}
-    a{color:#2563eb;text-decoration:none}
-    a:hover{text-decoration:underline}
-    .links a{margin-right:14px}
+    :root {
+      --primary: #00f2ff; /* 赛博蓝 */
+      --secondary: #bd00ff; /* 霓虹紫 */
+      --bg-color: #050505;
+      --text-color: #e0e0e0;
+      --glass-bg: rgba(255, 255, 255, 0.03);
+      --glass-border: rgba(255, 255, 255, 0.1);
+    }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+
+    body {
+      font-family: 'JetBrains Mono', monospace;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+
+    /* 背景 Canvas */
+    #canvas-bg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+
+    /* 主卡片容器 */
+    .card {
+      position: relative;
+      z-index: 1;
+      width: 100%;
+      max-width: 600px;
+      padding: 40px;
+      background: var(--glass-bg);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      border: 1px solid var(--glass-border);
+      border-radius: 20px;
+      box-shadow: 0 0 40px rgba(0, 242, 255, 0.1);
+      animation: fadeIn 1.5s ease-out;
+      margin: 20px;
+    }
+
+    /* 名字 - 故障风效果 */
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3rem;
+      font-weight: 900;
+      letter-spacing: 2px;
+      color: #fff;
+      text-transform: uppercase;
+      position: relative;
+      margin-bottom: 10px;
+      text-shadow: 2px 2px var(--secondary), -2px -2px var(--primary);
+      animation: glitch 3s infinite alternate;
+    }
+
+    /* 标签行 */
+    .tags {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 25px;
+    }
+
+    .tag {
+      font-size: 0.8rem;
+      padding: 5px 12px;
+      border-radius: 50px;
+      border: 1px solid var(--primary);
+      color: var(--primary);
+      background: rgba(0, 242, 255, 0.05);
+      text-transform: uppercase;
+      transition: all 0.3s ease;
+    }
+
+    .tag:hover {
+      background: var(--primary);
+      color: #000;
+      box-shadow: 0 0 15px var(--primary);
+    }
+
+    /* 简介区域 */
+    .bio {
+      margin-bottom: 30px;
+      min-height: 60px; /* 防止高度跳动 */
+      line-height: 1.6;
+      font-size: 1rem;
+      color: #aaa;
+    }
+    
+    .cursor {
+      display: inline-block;
+      width: 8px;
+      height: 18px;
+      background-color: var(--primary);
+      animation: blink 1s infinite;
+      vertical-align: middle;
+      margin-left: 5px;
+    }
+
+    /* 链接按钮 */
+    .links {
+      display: flex;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .btn {
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+      padding: 12px 24px;
+      border: 1px solid var(--glass-border);
+      border-radius: 8px;
+      background: linear-gradient(45deg, transparent 5%, var(--glass-bg) 5%);
+      transition: all 0.3s ease;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .btn::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+      transition: 0.5s;
+    }
+
+    .btn:hover::before {
+      left: 100%;
+    }
+
+    .btn:hover {
+      border-color: var(--secondary);
+      box-shadow: 0 0 20px rgba(189, 0, 255, 0.4);
+      transform: translateY(-2px);
+    }
+
+    /* 动画关键帧 */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes blink {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0; }
+    }
+
+    @keyframes glitch {
+      0% { text-shadow: 2px 2px var(--secondary), -2px -2px var(--primary); }
+      25% { text-shadow: -2px 2px var(--secondary), 2px -2px var(--primary); }
+      50% { text-shadow: 2px -2px var(--secondary), -2px 2px var(--primary); }
+      75% { text-shadow: -2px -2px var(--secondary), 2px 2px var(--primary); }
+      100% { text-shadow: 2px 2px var(--secondary), -2px -2px var(--primary); }
+    }
+
+    /* 移动端适配 */
+    @media (max-width: 600px) {
+      h1 { font-size: 2.2rem; }
+      .card { padding: 25px; margin: 15px; }
+      .links { flex-direction: column; gap: 10px; text-align: center; }
+    }
   </style>
 </head>
 <body>
-  <div class="card">
+
+  <!-- 动态背景 -->
+  <canvas id="canvas-bg"></canvas>
+
+  <main class="card">
     <h1>CHEN HAO</h1>
-    <div class="muted">MSc @ NTU · AI / FinTech / Agents</div>
-    <p>Hi! I’m Chen Hao. This is my personal homepage.</p>
-    <div class="links">
-      <a href="https://github.com/CHEHHAO">GitHub</a>
-      <a href="#">CV</a>
-      <a href="#">Email</a>
+    
+    <div class="tags">
+      <span class="tag">MSc @ NTU</span>
+      <span class="tag">AI Research</span>
+      <span class="tag">FinTech</span>
+      <span class="tag">Autonomous Agents</span>
     </div>
-  </div>
+
+    <div class="bio">
+      <span id="typewriter"></span><span class="cursor"></span>
+    </div>
+
+    <div class="links">
+      <a href="https://github.com/CHEHHAO" target="_blank" class="btn">GITHUB</a>
+      <a href="#" class="btn">RESUME</a>
+      <a href="mailto:your-email@example.com" class="btn">CONTACT</a>
+    </div>
+  </main>
+
+  <script>
+    // --- 打字机效果 ---
+    const textToType = "System initialized. I build intelligent agents and explore the frontier of FinTech.";
+    const typeWriterElement = document.getElementById('typewriter');
+    let i = 0;
+
+    function typeWriter() {
+      if (i < textToType.length) {
+        typeWriterElement.innerHTML += textToType.charAt(i);
+        i++;
+        setTimeout(typeWriter, 50); // 打字速度
+      }
+    }
+
+    // 延迟一点开始打字，更有仪式感
+    setTimeout(typeWriter, 1000);
+
+
+    // --- 粒子网络背景 (Neural Network Effect) ---
+    const canvas = document.getElementById('canvas-bg');
+    const ctx = canvas.getContext('2d');
+    let particlesArray;
+
+    // 设置画布大小
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    class Particle {
+      constructor() {
+        this.x = Math.random() * canvas.width;
+        this.y = Math.random() * canvas.height;
+        this.directionX = (Math.random() * 0.4) - 0.2;
+        this.directionY = (Math.random() * 0.4) - 0.2;
+        this.size = Math.random() * 2 + 1;
+        this.color = '#00f2ff';
+      }
+      // 绘制
+      draw() {
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2, false);
+        ctx.fillStyle = this.color;
+        ctx.fill();
+      }
+      // 更新位置
+      update() {
+        if (this.x > canvas.width || this.x < 0) this.directionX = -this.directionX;
+        if (this.y > canvas.height || this.y < 0) this.directionY = -this.directionY;
+        this.x += this.directionX;
+        this.y += this.directionY;
+        this.draw();
+      }
+    }
+
+    // 初始化粒子
+    function init() {
+      particlesArray = [];
+      let numberOfParticles = (canvas.height * canvas.width) / 9000; // 粒子密度
+      for (let i = 0; i < numberOfParticles; i++) {
+        particlesArray.push(new Particle());
+      }
+    }
+
+    // 连线逻辑 (模拟神经网络)
+    function connect() {
+      let opacityValue = 1;
+      for (let a = 0; a < particlesArray.length; a++) {
+        for (let b = a; b < particlesArray.length; b++) {
+          let distance = ((particlesArray[a].x - particlesArray[b].x) * (particlesArray[a].x - particlesArray[b].x)) + 
+                         ((particlesArray[a].y - particlesArray[b].y) * (particlesArray[a].y - particlesArray[b].y));
+          if (distance < (canvas.width/7) * (canvas.height/7)) {
+            opacityValue = 1 - (distance/20000);
+            ctx.strokeStyle = 'rgba(0, 242, 255,' + opacityValue + ')';
+            ctx.lineWidth = 1;
+            ctx.beginPath();
+            ctx.moveTo(particlesArray[a].x, particlesArray[a].y);
+            ctx.lineTo(particlesArray[b].x, particlesArray[b].y);
+            ctx.stroke();
+          }
+        }
+      }
+    }
+
+    // 动画循环
+    function animate() {
+      requestAnimationFrame(animate);
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (let i = 0; i < particlesArray.length; i++) {
+        particlesArray[i].update();
+      }
+      connect();
+    }
+
+    // 窗口大小改变时重置
+    window.addEventListener('resize', () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+      init();
+    });
+
+    init();
+    animate();
+  </script>
 </body>
 </html>
